# UCO_practices

./: README.md
Algorithmic/p1/: functionality.cpp  functionality.hpp  gnuplotFibonacci.sh  gnuplotMatrizCuadrado.sh  sistemaEcuaciones.hpp
Algorithmic/p2/: CMakeLists.txt  functionality.cpp  gnuplotQuicksort.sh  main.cpp
algoritmica/: algoritmos.cpp  functionality.cpp  main.cpp  mediana5nEleMin5000.eps  tiemposReales.txt  vector.hpp
algoritmica/p1/: CMakeLists.txt  ClaseTiempo.hpp  gnuplotOrdenacionSeleccion.sh  main.cpp
algoritmica/p2/: CMakeLists.txt  ClaseTiempo.hpp  README.md  algoritmos.hpp  functionality.hpp  gnuplot.cpp  gnuplot.hpp  gnuplotQuicksort.sh  graficaQuicksort.eps  vector.cpp
algoritmica/p3/: CMakeLists.txt  main.cpp  problemaCambio.cpp
algoritmica/p3_algoritmos_voraces/Practica3/: main.cpp  problemaCambio.hpp  problemaMochila.cpp  problemaMochila.hpp
